# postman-docs-ai

./: Makefile  embeddings.json  pyproject.toml
postman_docs_ai/: search.py
scripts/: generate_embeddings.py
